maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:2: error: Missing closing brace `}' assumed here
def casP(x:Int,y:Int,k):Array[Int,Int] {
^JediEscaper:2: error: expected class or object definition
def casP(x:Int,y:Int,k):Array[Int,Int] {
^